# OpenQCDxx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_NVC++.txt  README.md
app/GaugeField_tests/: random_gauge_field.cpp
app/compute_plaquette/: main.cpp
app/init_print_lattice/: main.cpp
app/latticeField_tests/: print_tests.cpp
app/parallel_computations/: apply_func.cpp  randomize.cpp  reduce_if.cpp
app/random/: test1.cpp  test2.cpp
app/randomize/: main.cpp
include/: common_utilities.h  constants.h
include/gauge/: GaugeField.h
include/lattice/: GaugeField.h  LatticeField.h  LatticeGeometry.h
include/legacy/: su3.h
include/mdarray/: Makefile  mdarray.h  test1  test2.cpp  test4  test4.cpp
include/mdarray_exploration/: Makefile  mdarray.h  test1.cpp  test2  test2.cpp  test3  test3.cpp
include/mdarrays/: Makefile  main  main.cpp
include/objects/: SU_3.h
include/random/: ranlux.h  ranlxd.h  ranlxs.h
modules/gauge/: GaugeField.cpp
modules/lattice/: GaugeField.cpp  LatticeField.cpp  LatticeGeometry.cpp
modules/random/: Ranlxs.cpp
tests/: CMakeLists.txt
tests/SU_3/: su_3_tests.cpp
tests/SU_3_randomization/: Makefile  SU_N_random_matrix.cpp  SU_N_random_matrix_stats.cpp  U_N_random_matrix.cpp  U_N_random_matrix_stats.cpp  eigenvals_SU(N).ipynb  eigenvals_U(N).ipynb  qr_decomposition.cpp
tests/gauge_field_minimal/: GaugeField.h
theoretical_framework/: build_html.sh  index.md  lattice_qcd.md
